--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,22 @@
 .App {
+  background: linear-gradient(to bottom, #202020, #111119);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
   text-align: center;
-  overflow: hidden;
+  display: flex;
+}
+
+.App-body{
+  background: linear-gradient(to bottom, #202020, #111119);
+  padding-left: 150px;
+  margin: auto;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-logo {
@@ -12,18 +28,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background: linear-gradient(to bottom, #202020, #111119);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  overflow: hidden;
 }
 
 .App-link {
