--- a/src/components/menuUI.module.css
+++ b/src/components/menuUI.module.css
@@ -20,24 +20,13 @@
     transition: 0.25s;
 }
 
-.gameImage {
-    max-width: 70px;
-    max-height: 70px;
-    resize: both;
-}
-
-.homeScreen {
-    position: relative;
-    margin-left: 10%;
-}
-
 .navBar {
     padding: 10px;
     width: 150px;
     height: 100vh;
     float: left;
     z-index: 100;
-    position: absolute; /* FIXME: DOESNT POSITION CORRECTLY ON WINDOW RESIZE */
+    position: absolute;
 
     margin-left: 150;
     
